# config

./: CMakeLists.txt  README.md
include/ape/: config.hpp
include/ape/config/: abi_prefix.hpp  abi_suffix.hpp  config.hpp  version.hpp
include/ape/config/compiler/: clang_compiler.hpp  gnuc_compiler.hpp  msvc_compiler.hpp
test/: CMakeLists.txt  main.cpp
